sudoku selection working, though I would like an input box at some point

--- a/src/hard/suDoku/src/index.html
+++ b/src/hard/suDoku/src/index.html
@@ -12,6 +12,11 @@
   <body>
     <div class="grid container">
       <div id="sudoku-board" class="grid"></div>
+      <div id="puzzle-selection" class="grid">
+        <button id="previous-puzzle" class="button">Previous Puzzle</button>
+        <div id="puzzle-id" class="grid"></div>
+        <button id="next-puzzle" class="button">Next Puzzle</button>
+      </div>
     </div>
   </body>
 </html>
