added input box for sudoku selection

--- a/src/hard/suDoku/src/index.html
+++ b/src/hard/suDoku/src/index.html
@@ -14,7 +14,10 @@
       <div id="sudoku-board" class="grid"></div>
       <div id="puzzle-selection" class="grid">
         <button id="previous-puzzle" class="button">Previous Puzzle</button>
-        <div id="puzzle-id" class="grid"></div>
+        <div id="puzzle-id" class="grid grid-column">
+          <input type="number">
+          <div></div>
+        </div>
         <button id="next-puzzle" class="button">Next Puzzle</button>
       </div>
     </div>
